--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,6 @@ edition = "2018"
 
 [dependencies]
 rocket = "0.5.0-rc.1"
-
+diesel = { version = "1.4.8", features = ["postgres"] }
+dotenv = "0.15.0"
 
