--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,4 +7,4 @@ edition = "2018"
 rocket = "0.5.0-rc.1"
 diesel = { version = "1.4.8", features = ["postgres"] }
 dotenv = "0.15.0"
-
+bcrypt = "0.10.1"
