--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,7 @@ rocket = "0.5.0-rc.1"
 diesel = { version = "1.4.8", features = ["postgres"] }
 dotenv = "0.15.0"
 bcrypt = "0.10.1"
+jwt = "0.15.0"
+hmac = "0.11.0"
+sha2 = "0.9.8"
+json = "0.12.4"
